--- a/src/pages/contato/contato.css
+++ b/src/pages/contato/contato.css
@@ -28,6 +28,7 @@ body::-webkit-scrollbar {
 
 .navegacao{
     position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
     display: flex;    
